--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>GardenGauge Privacy Policy</title>
+<title>Garden Gauge</title>
 <meta name="keywords" content="">
 <meta name="description" content="Data We Collect
 Location Data
@@ -101,7 +101,7 @@ We do not track you across other apps or websites, and we do not use your data f
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/gardengauge/" accesskey="h" title="GardenGauge Privacy Policy (Alt + H)">GardenGauge Privacy Policy</a>
+            <a href="http://localhost:1313/gardengauge/" accesskey="h" title="Garden Gauge (Alt + H)">Garden Gauge</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -186,7 +186,7 @@ We do not track you across other apps or websites, and we do not use your data f
 <ul>
 <li>You can delete all app data by deleting the app</li>
 <li>You can revoke location permissions at any time in iOS Settings</li>
-<li>Contact us at <a href="mailto:help@thirsttracker.app">help@thirsttracker.app</a> for questions</li>
+<li>Contact us at <a href="mailto:support@nonverbose.ai">support@nonverbose.ai</a> for questions</li>
 </ul>
 <h2 id="third-party-services">Third-Party Services<a hidden class="anchor" aria-hidden="true" href="#third-party-services">#</a></h2>
 <ul>
@@ -199,7 +199,7 @@ We do not track you across other apps or websites, and we do not use your data f
 <h2 id="childrens-privacy">Children&rsquo;s Privacy<a hidden class="anchor" aria-hidden="true" href="#childrens-privacy">#</a></h2>
 <p>We do not knowingly collect personal information from children under 13. If you believe a child has provided us with data, please contact us and we will delete it.</p>
 <hr>
-<p><em>Last updated: 2025-01-16</em></p>
+<p><em>Last updated: 2025-09-22</em></p>
 
 
   </div>
@@ -212,7 +212,7 @@ We do not track you across other apps or websites, and we do not use your data f
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://localhost:1313/gardengauge/">GardenGauge Privacy Policy</a></span> · 
+        <span>&copy; 2025 <a href="http://localhost:1313/gardengauge/">Garden Gauge</a></span> · 
 
     <span>
         Powered by
