--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -13,21 +13,22 @@ Location Data
 What: GPS coordinates of your garden locations
 Why: To fetch accurate weather and soil data for your specific locations
 How: Only when you grant location permission and add new garden zones
-Storage: We only use the GPS coordinates you provide when creating garden zones. We do not continuously track your location in the background.
+Storage: We only use the GPS coordinates you provide when creating garden zones. We do not continuously track your location in the background
 
 Weather and Soil Data
 
 What: Rainfall, temperature, soil composition data from third-party APIs
 Why: To provide moisture calculations and garden recommendations
 Sources: Open-Meteo API, NOAA/NCEI, USDA Web Soil Survey, SoilGrids
-Storage: Cached locally on your device for app functionality. This cached data is automatically refreshed or deleted as needed for the app to function.
+Storage: Cached locally on your device for app functionality. This cached data is automatically refreshed or deleted as needed for the app to function
 
 Anonymous Usage Analytics
 
 What: App usage patterns, feature usage, crash reports
 Why: To improve app performance and user experience
-How: Via TelemetryDeck with anonymous, stable identifiers. These identifiers are random and cannot be linked to your identity, device, or Apple account.
+How: Via TelemetryDeck with anonymous, stable identifiers. These identifiers are random and cannot be linked to your identity, device, or Apple account
 No Personal Data: We cannot identify you from this data
+
 
 Data We Do NOT Collect
 
@@ -147,22 +148,23 @@ We do not track you across other apps or websites, and we do not use your data f
 <li><strong>What</strong>: GPS coordinates of your garden locations</li>
 <li><strong>Why</strong>: To fetch accurate weather and soil data for your specific locations</li>
 <li><strong>How</strong>: Only when you grant location permission and add new garden zones</li>
-<li><strong>Storage</strong>: We only use the GPS coordinates you provide when creating garden zones. We do not continuously track your location in the background.</li>
+<li><strong>Storage</strong>: We only use the GPS coordinates you provide when creating garden zones. We do not continuously track your location in the background</li>
 </ul>
 <h3 id="weather-and-soil-data">Weather and Soil Data<a hidden class="anchor" aria-hidden="true" href="#weather-and-soil-data">#</a></h3>
 <ul>
 <li><strong>What</strong>: Rainfall, temperature, soil composition data from third-party APIs</li>
 <li><strong>Why</strong>: To provide moisture calculations and garden recommendations</li>
 <li><strong>Sources</strong>: Open-Meteo API, NOAA/NCEI, USDA Web Soil Survey, SoilGrids</li>
-<li><strong>Storage</strong>: Cached locally on your device for app functionality. This cached data is automatically refreshed or deleted as needed for the app to function.</li>
+<li><strong>Storage</strong>: Cached locally on your device for app functionality. This cached data is automatically refreshed or deleted as needed for the app to function</li>
 </ul>
 <h3 id="anonymous-usage-analytics">Anonymous Usage Analytics<a hidden class="anchor" aria-hidden="true" href="#anonymous-usage-analytics">#</a></h3>
 <ul>
 <li><strong>What</strong>: App usage patterns, feature usage, crash reports</li>
 <li><strong>Why</strong>: To improve app performance and user experience</li>
-<li><strong>How</strong>: Via TelemetryDeck with anonymous, stable identifiers. These identifiers are random and cannot be linked to your identity, device, or Apple account.</li>
+<li><strong>How</strong>: Via TelemetryDeck with anonymous, stable identifiers. These identifiers are random and cannot be linked to your identity, device, or Apple account</li>
 <li><strong>No Personal Data</strong>: We cannot identify you from this data</li>
 </ul>
+<hr>
 <h2 id="data-we-do-not-collect">Data We Do NOT Collect<a hidden class="anchor" aria-hidden="true" href="#data-we-do-not-collect">#</a></h2>
 <ul>
 <li>Names, email addresses, or other personally identifiable information</li>
@@ -189,15 +191,20 @@ We do not track you across other apps or websites, and we do not use your data f
 <li>Contact us at <a href="mailto:support@nonverbose.ai">support@nonverbose.ai</a> for questions</li>
 </ul>
 <h2 id="third-party-services">Third-Party Services<a hidden class="anchor" aria-hidden="true" href="#third-party-services">#</a></h2>
+<p>We send the coordinats you provide to fetch relevant weather and soil information. These services do not receive any other personal data:</p>
 <ul>
-<li><strong>Open-Meteo</strong>: Weather data</li>
-<li><strong>NOAA/NCEI</strong>: US weather observations</li>
-<li><strong>USDA Web Soil Survey</strong>: US soil data</li>
-<li><strong>SoilGrids</strong>: Global soil data</li>
-<li><strong>TelemetryDeck</strong>: Anonymous analytics (<a href="https://telemetrydeck.com/privacy">Privacy Policy</a>)</li>
+<li><strong>Open-Meteo</strong>: provides weather data (<a href="https://open-meteo.com/en/terms">Privacy Policy</a>)</li>
+<li><strong>NOAA/NCEI</strong>: provides US weather data</li>
+<li><strong>USDA Web Soil Survey</strong>: provides US soil data</li>
+<li><strong>SoilGrids</strong>: provides global soil data (<a href="https://www.isric.org/about/data-policy">Privacy Policy</a>).</li>
 </ul>
+<p>We also plan to use analytics service to improve app performance. The data we share is anonymous and cannot be linked to you or your device:</p>
+<ul>
+<li><strong>TelemetryDeck</strong>: anonymous analytics (<a href="https://telemetrydeck.com/privacy">Privacy Policy</a>)</li>
+</ul>
+<hr>
 <h2 id="childrens-privacy">Children&rsquo;s Privacy<a hidden class="anchor" aria-hidden="true" href="#childrens-privacy">#</a></h2>
-<p>We do not knowingly collect personal information from children under 13. If you believe a child has provided us with data, please contact us and we will delete it.</p>
+<p>We do not knowingly collect personal information from children under 13. If we discover such data has been provided, we will promptly delete it.</p>
 <hr>
 <p><em>Last updated: 2025-09-22</em></p>
 
